<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~ * Company : Bsetec
  ~ * Product: Instasocial
  ~ * Email : support@bsetec.com
  ~ * Copyright © 2018 BSEtec. All rights reserved.
  ~ **/
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layoutActionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarHeight"
        android:background="@drawable/bg_action_bar">

        <com.androidapp.instasocial.ui.CompatImageView
            android:id="@+id/user_sett_back"
            android:layout_width="@dimen/prof_bckicon_widthheight"
            android:layout_height="@dimen/prof_bckicon_widthheight"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/prof_topicons_padding_leftright"
            app:filterColor="@color/colorPrimary"
            android:src="@drawable/ic_back" />

        <com.androidapp.instasocial.ui.CompatTextView
            style="@style/PageTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_txt_change_password"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:fontPath="@string/font_roboto_medium" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_change_pass_margin_horizontal"
        android:layout_marginTop="@dimen/dim_change_pass_margin_top"
        android:theme="@style/TextInputLayoutStyle">

        <com.androidapp.instasocial.ui.CompatEditText
            android:id="@+id/edtOldPass"
            style="@style/InputBoxStyle"
            android:hint="@string/str_txt_change_old_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_change_pass_margin_horizontal"
        android:layout_marginVertical="@dimen/dim_change_pass_margin_top"
        android:theme="@style/TextInputLayoutStyle">

        <com.androidapp.instasocial.ui.CompatEditText
            android:id="@+id/edtNewPass"
            style="@style/InputBoxStyle"
            android:hint="@string/str_txt_change_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_change_pass_margin_horizontal"
        android:layout_marginTop="@dimen/dim_change_pass_margin_top"
        android:theme="@style/TextInputLayoutStyle">

        <com.androidapp.instasocial.ui.CompatEditText
            android:id="@+id/edtConfirmPass"
            style="@style/InputBoxStyle"
            android:hint="@string/str_txt_change_confirm_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <com.androidapp.instasocial.ui.CompatTextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_login_margin_top"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dim_change_pass_margin_horizontal"
        android:paddingVertical="@dimen/dim_login_padding_vertical"
        android:text="@string/str_txt_change_submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:fontPath="@string/font_roboto_regular" />
    </LinearLayout>

</RelativeLayout>